--- a/frb_example/with_flutter/rust/Cargo.toml
+++ b/frb_example/with_flutter/rust/Cargo.toml
@@ -5,11 +5,14 @@ edition = "2018"
 
 [lib]
 name = "flutter_rust_bridge_example"
-crate-type = ["cdylib"]
+# android
+# crate-type = ["cdylib"]
+# ios
+crate-type = ["staticlib"]
 
 [dependencies]
 anyhow = { version = "1.0.62", features = ["backtrace"] }
 flutter_rust_bridge = { path = "../../../frb_rust" }
-num = "0.4" # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
-image = "0.24.3" # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
-crossbeam = "0.8" # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
+num = "0.4"                                               # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
+image = "0.24.3"                                          # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
+crossbeam = "0.8"                                         # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
